GridClassKey 1.0.0-rc4
=================================================
- [#59] Add typeahead to Add TV Field combo box
- add "Reset" button on setting's grid
- add Properties field for new child
- [#61][#62] enable TV updating on the grid
- [#56] revert the checkbox action
- [#57] typo on LIKE query
- fix dropdown menuindex sorting
- add version param when loading CSS and JS files
- fix Action's column width on FireFox
- [#53] Fix AjaxManager compatibility issues by @danyaPostfactum

GridClassKey 1.0.0-rc3 (March 22, 2014)
=================================================
- [#35] Icons on button controls break in MODX 2.3
- [#44] Feature request: Publish/unpublish icon
- [#33] FR: Sorting based on TV values
- move the back button field above the rest settings
- fix TV parsed value on grid
- fix class_key initiation of the new child resource
- fix width of the Action column

GridClassKey 1.0.0-rc2 (March 18, 2014)
=================================================
- [#41] option to replace the text of "Back to Container" button
- apply default children's settings into plugin
- add fixed column option on grid's setting
- added russian & italian lexicons
- remove spaces on the package's name <http://forums.modx.com/thread/88734/package-version-check#dis-post-489531>
- add OR & AND condition option on Advanced Search window
- fix the filtering on the grid
- fix conditional statement in plugin on "OnDocFormPrerender" event

GridClassKey 1.0.0-rc-1 (February 3, 2014)
=================================================
- [#11] load Rich Text Editor
- [#18] add drag and drop menuindex sorting
- add CMP to overcome loading error of the container if settings break the page
- re-manage folders and files
- fix sorting when the TV has dash
- add columns order in Field's setting by dragging and dropping the row
- [#20] fix column width configuration to work by typecasting it to number
- use field's name for sorting values