@@ -1,0 +1,54 @@
+<?php
+
+/**
+ * GridClassKey
+ *
+ * Copyright 2013 - 2014 by goldsky <goldsky@virtudraft.com>
+ *
+ * This file is part of GridClassKey, a custom class key for MODX
+ * Revolution's Manager to hide child resources inside container's grid.
+ *
+ * GridClassKey is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation version 3,
+ *
+ * GridClassKey is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * GridClassKey; if not, write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307 USA
+ *
+ * GridClassKey build script
+ *
+ * @package gridclasskey
+ * @subpackage build
+ */
+
+/**
+ * @param   string  $filename   filename
+ * @return  string  file content
+ */
+if (!function_exists('getSnippetContent')) {
+    function getSnippetContent($filename) {
+        $o = file_get_contents($filename);
+        $o = str_replace('<?php', '', $o);
+        $o = str_replace('?>', '', $o);
+        $o = trim($o);
+        return $o;
+    }
+}
+
+$snippets = array();
+
+$snippets[0] = $modx->newObject('modSnippet');
+$snippets[0]->fromArray(array(
+    'id' => 0,
+    'property_preprocess' => 1,
+    'name' => 'gridClassKeyNumChildrenField',
+    'description' => 'Example of a snippet for field on grid',
+    'snippet' => getSnippetContent($sources['source_core'] . '/elements/snippets/gridclasskeynumchildrenfield.snippet.php'),
+        ), '', true, true);
+
+return $snippets;
