@@ -1,15 +1,15 @@
-GridClassKey.panel.MainFieldsCombo = function(config) {
+GridClassKey.panel.SnippetFieldsCombo = function(config) {
     config = config || {};
 
     var items = [];
     if (!config.fieldLabel) {
         items.push({
-            html: '<div class="x-form-item-label">' + _('gridclasskey.settings_add_main_field') + ': </div>'
+            html: '<div class="x-form-item-label">' + _('gridclasskey.settings_add_snippet_field') + ': </div>'
             , border: false
         });
     }
     items.push({
-        xtype: 'gridclasskey-combo-mainfields'
+        xtype: 'gridclasskey-combo-snippetfields'
         , id: config.id + '-combo' || ''
         , comboWidth: config.comboWidth || ''
     }, {
@@ -21,8 +21,9 @@ GridClassKey.panel.MainFieldsCombo = function(config) {
                         store = targetGrid.getStore();
                 var fieldsCombo = Ext.getCmp(config.id + '-combo');
                 var comboValue = fieldsCombo.getValue();
+                var text = fieldsCombo.lastSelectionText;
                 if (comboValue) {
-                    var r = new store.recordType({"sort": store.getCount() + 1, "name": comboValue, "type": "main"}); 
+                    var r = new store.recordType({"sort": store.getCount() + 1, "name": text, "type": "snippet"}); 
                     r.commit();
                     store.add(r);
                     store.commitChanges();
@@ -62,9 +63,9 @@ GridClassKey.panel.MainFieldsCombo = function(config) {
         , items: items
     });
 
-    GridClassKey.panel.MainFieldsCombo.superclass.constructor.call(this, config);
+    GridClassKey.panel.SnippetFieldsCombo.superclass.constructor.call(this, config);
 };
 
 
-Ext.extend(GridClassKey.panel.MainFieldsCombo, MODx.Panel);
-Ext.reg('gridclasskey-panel-mainfieldscombo', GridClassKey.panel.MainFieldsCombo);
+Ext.extend(GridClassKey.panel.SnippetFieldsCombo, MODx.Panel);
+Ext.reg('gridclasskey-panel-snippetfieldscombo', GridClassKey.panel.SnippetFieldsCombo);
