@@ -45,6 +45,7 @@ $_lang['gridclasskey.sortable'] = 'Sortable';
 $_lang['gridclasskey.clear'] = 'Clear';
 $_lang['gridclasskey.settings_add_main_field'] = 'Add Main Field';
 $_lang['gridclasskey.settings_add_tv_field'] = 'Add TV Field';
+$_lang['gridclasskey.settings_add_snippet_field'] = 'Add Snippet Field';
 $_lang['gridclasskey.fields'] = 'Fields';
 $_lang['gridclasskey.fields_desc'] = 'This setting is to set how the Grid will be rendered.';
 $_lang['gridclasskey.back_to_default'] = 'Back to default';
@@ -95,3 +96,5 @@ $_lang['gridclasskey.children_settings_desc'] = 'Settings for new child resource
 $_lang['gridclasskey.backbutton_text'] = 'Text for "Back to Container" button';
 $_lang['gridclasskey.backbutton_text_desc'] = 'Replace the text for "Back to Container" tab for the children of this container only. Leave it empty for the default.';
 $_lang['gridclasskey.properties_desc'] = 'Custom properties in JSON format, usually for custom class key, plugin, or snippet.';
+$_lang['gridclasskey.default_per_page'] = 'Default Per Page';
+$_lang['gridclasskey.default_per_page_desc'] = 'If not empty, this will override the default number of results to show in grids throughout the manager';
