@@ -1,0 +1,50 @@
+<?php
+
+/**
+ * GridClassKey
+ *
+ * Copyright 2013 - 2014 by goldsky <goldsky@virtudraft.com>
+ *
+ * This file is part of GridClassKey, a custom class key for MODX
+ * Revolution's Manager to hide child resources inside container's grid.
+ *
+ * GridClassKey is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation version 3,
+ *
+ * GridClassKey is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * GridClassKey; if not, write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package gridclasskey
+ * @subpackage processor
+ */
+require_once MODX_CORE_PATH . 'model/modx/processors/element/snippet/getlist.class.php';
+
+class GetSnippetFieldsListProcessor extends modSnippetGetListProcessor {
+
+    public function prepareQueryBeforeCount(xPDOQuery $c) {
+        $query = $this->getProperty('query');
+        if ($query) {
+            $c->where(array(
+                'name:LIKE' => "{$query}%"
+            ));
+        }
+        $c->leftJoin('modCategory','Category');
+        return $c;
+    }
+    
+    public function prepareQueryAfterCount(xPDOQuery $c) {
+        $c->select($this->modx->getSelectColumns($this->classKey,$this->classKey));
+        $c->select(array(
+            'category_name' => 'Category.category',
+        ));
+        return $c;
+    }
+}
+
+return 'GetSnippetFieldsListProcessor';
